feat: Initial release of Aegis-Proxy-Stack
Phase 1: Foundation Setup Complete
- Integrated NGINX Proxy Manager (NPM) with open-appsec WAF
- Established Docker Compose architecture for standalone deployment
- Implemented hardened security settings (IPv6 block, Network isolation)
- Configured log rotation and compliance-ready logging
- Added automated installation script (install.sh)
- Documentation: Complete installation and verification guide

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# 쉘 스크립트는 윈도우에서 체크아웃하더라도 항상 LF(리눅스 줄바꿈)를 유지하도록 강제
+*.sh text eol=lf
